fix: scrollbar on moz - implement colors for moz scrollbars - fix toc padding on moz

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -135,6 +135,11 @@ input {
   color: rgb(var(--color-one-front));
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(var(--color-one)) transparent;
+}
+
 ::-webkit-scrollbar {
   height: 4px;
   width: 4px;
